--- a/docs/uk/mkdocs.yml
+++ b/docs/uk/mkdocs.yml
@@ -54,6 +54,8 @@ nav:
   - tr: /tr/
   - uk: /uk/
   - zh: /zh/
+- Туторіал - Посібник користувачаи:
+  - tutorial/header-params.md
 markdown_extensions:
 - toc:
     permalink: true
